# fraud_detection

./: .coverage  .gitignore  Dockerfile  Evaluation.py  README.md  api.py  docker-compose.yml  main.py  mlops.py  pyproject.toml  requirements.txt  testFraudSystem.py
.github/workflows/: ci_cd.yml
model_registry/: manifest.json
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboard.yml
notebooks/: preprocessing.ipynb
notebooks/.ipynb_checkpoints/: preprocessing-checkpoint.ipynb
notebooks/saved_models/: gradient_boosting.joblib  logistic_regression.joblib  metadata.json  scaler.joblib  xgboost.joblib
scripts/: register_model.py
src/: __init__.py  api.py  evaluation.py  features.py  inference.py  mlops.py  model_loader.py
tests/: test_fraud_system.py
